--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"express": "3.5.x",
 		"jade": "1.3.x",
-		"mocha": "1.18.x"
+		"mocha": "1.18.x",
+		"serialport": "1.3.x"
 	},
 	"devDependencies": {
 		
