--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
 	"dependencies": {
 		"express": "3.5.x",
 		"jade": "1.3.x",
-		"mocha": "1.18.x",
 		"serialport": "1.3.x"
 	},
 	"devDependencies": {
-		
+		"grunt": "0.4.x",
+		"grunt-contrib-uglify": "0.4.x",
+		"grunt-contrib-coffee": "0.10.x"
 	},
 	"engines": {
 		"node": "0.10.x",
