--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"devDependencies": {
 		"grunt": "0.4.x",
 		"grunt-contrib-uglify": "0.4.x",
-		"grunt-contrib-coffee": "0.10.x"
+		"grunt-contrib-coffee": "0.10.x",
+		"grunt-contrib-jade": "0.11.x"
 	},
 	"engines": {
 		"node": "0.10.x",
