--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-        "name": "tetris-table",
-	"description": "Nodejs web server that controls the tetris table.",
-	"author": "Rob Homan <homan.robertc@gmail.com>",
-	"version": "0.0.1",
-	"dependencies": {
-		"express": "3.5.x",
-		"jade": "1.3.x",
-		"serialport": "1.3.x"
-	},
-	"devDependencies": {
-		"grunt": "0.4.x",
-		"grunt-contrib-uglify": "0.4.x",
-		"grunt-contrib-coffee": "0.10.x",
-		"grunt-contrib-jade": "0.11.x"
-	},
-	"engines": {
-		"node": "0.10.x",
-		"npm": "1.4.x"
-	}
+  "name": "tetris-table",
+  "description": "Nodejs web server that controls the tetris table.",
+  "author": "Rob Homan <homan.robertc@gmail.com>",
+  "version": "0.0.1",
+  "dependencies": {
+    "express": "3.5.x",
+    "jade": "1.3.x",
+    "serialport": "1.3.x",
+    "socket.io": "^1.0.4"
+  },
+  "devDependencies": {
+    "grunt": "0.4.x",
+    "grunt-contrib-uglify": "0.4.x",
+    "grunt-contrib-coffee": "0.10.x",
+    "grunt-contrib-jade": "0.11.x"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
+  }
 }
