--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Rob Homan <homan.robertc@gmail.com>",
   "version": "0.0.1",
   "dependencies": {
+    "bower": "^1.3.5",
     "express": "3.5.x",
     "jade": "1.3.x",
     "serialport": "1.3.x",
