--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "version": "0.0.1",
   "dependencies": {
     "bower": "^1.3.5",
+    "chai": "^1.9.1",
     "express": "3.5.x",
     "jade": "1.3.x",
+    "mocha": "^1.20.1",
+    "pauseable": "^0.1.2",
     "serialport": "1.3.x",
     "socket.io": "^1.0.4"
   },
