--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Rob Homan <homan.robertc@gmail.com>",
   "version": "0.0.1",
   "dependencies": {
+    "angular": "^1.2.18",
     "bower": "^1.3.5",
     "chai": "^1.9.1",
     "express": "3.5.x",
