--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
   },
   "devDependencies": {
     "grunt": "0.4.x",
-    "grunt-contrib-uglify": "0.4.x",
     "grunt-contrib-coffee": "0.10.x",
-    "grunt-contrib-jade": "0.11.x"
+    "grunt-contrib-jade": "0.11.x",
+    "grunt-contrib-uglify": "0.4.x",
+    "gulp": "^3.8.5",
+    "gulp-clean": "^0.3.1",
+    "gulp-coffee": "^2.0.1",
+    "gulp-mocha": "^0.4.1",
+    "gulp-sourcemaps": "^0.4.4",
+    "gulp-util": "^2.2.19"
   },
   "engines": {
     "node": "0.10.x",
