--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "socket.io": "^1.0.4"
   },
   "devDependencies": {
+    "change-case": "^2.1.1",
+    "glob": "^4.0.5",
     "gulp": "^3.8.5",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.0.1",
     "gulp-mocha": "^0.4.1",
     "gulp-sourcemaps": "^0.4.4",
+    "gulp-task-listing": "^0.3.0",
     "gulp-util": "^2.2.19"
   },
   "engines": {
