--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "jade": "1.3.x",
     "mocha": "^1.20.1",
     "pauseable": "^0.1.2",
+    "q": "^1.0.1",
     "serialport": "1.3.x",
     "socket.io": "^1.0.4"
   },
   "devDependencies": {
+    "chai-as-promised": "^4.1.1",
     "change-case": "^2.1.1",
     "glob": "^4.0.5",
     "gulp": "^3.8.5",
