--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "gulp": "^3.8.5",
     "gulp-clean": "^0.3.1",
     "gulp-coffee": "^2.0.1",
+    "gulp-livereload": "^2.1.1",
     "gulp-mocha": "^0.4.1",
+    "gulp-nodemon": "^1.0.4",
     "gulp-sourcemaps": "^0.4.4",
     "gulp-task-listing": "^0.3.0",
-    "gulp-util": "^2.2.19"
+    "gulp-util": "^2.2.19",
+    "tiny-lr": "^0.1.4"
   },
   "engines": {
     "node": "0.10.x",
