--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,9 @@
   ],
   "dependencies": {
     "jquery": "^2.1.1",
-    "spectrum": "1.3.4" 
+    "spectrum": "1.3.4",
+    "ember": "~1.7.1",
+    "ember-data": "~1.0.0-beta.8",
+    "ember-localstorage-adapter": "~0.4.0"
   }
 }
